tests/unit/language/errors/naked_return_in_func.arche
// A `func` is a value and must return one — a naked `return;` (an early exit for a proc/sys) is
// a return-arity error in a func.
// RUN: %arche -o %t %s > %t.out 2>&1 ; grep -qi "returned 0" %t.out
func g(x: int) -> int {
  if (x < 0) {
    return;
  }
  return x;
}

proc main() {
  printf("%d\n", g(1));
}
